--- a/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FodboldApp.News">
+             x:Class="FodboldApp.News"
+             ControlTemplate="{StaticResource MainPageTemplate}">
     <ContentPage.Content>
-        <ScrollView Orientation="Vertical"
-                        VerticalOptions="FillAndExpand">
-            <StackLayout Padding="0, 0, 0, 0"
+        <StackLayout Padding="0, 0, 0, 0"
                          Margin="0, 0, 0, 0"
                          Spacing="0"
                          BackgroundColor="#f0f0f0">
@@ -71,8 +70,7 @@
                        HorizontalOptions="StartAndExpand">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer
-                Tapped="News_Tapped"
-                NumberOfTapsRequired="1"/>
+                            Tapped="News_Tapped"/>
                     </Image.GestureRecognizers>
                 </Image>
 
@@ -101,6 +99,5 @@
                     
                 </Image>
             </StackLayout>
-        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
