--- a/FodboldApp/FodboldApp/FodboldApp/View/Tournament.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Tournament.xaml
@@ -1,18 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FodboldApp.Tournament">
+             x:Class="FodboldApp.Tournament"
+             ControlTemplate="{StaticResource MainPageTemplate}">
     <ContentPage.Content>
-        <ScrollView Orientation="Vertical"
-                        VerticalOptions="FillAndExpand">
-            <StackLayout x:Name="pageLayout">
-                <Label Text="RESULTATER"
+        <StackLayout x:Name="pageLayout">
+            <Label Text="RESULTATER"
                    HorizontalOptions="CenterAndExpand"
                    FontSize="Large"
                    TextColor="{StaticResource textColor}"
                    BackgroundColor="#f0f0f0"/>
-                <Grid x:Name="itemGrid"  RowSpacing = "0" ColumnSpacing = "0"/>
-            </StackLayout>
-        </ScrollView>
+            <Grid x:Name="itemGrid"  RowSpacing = "0" ColumnSpacing = "0"/>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
