--- a/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
@@ -17,7 +17,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <ListView x:Name="clubList" ItemsSource="{Binding clubListSource}" BackgroundColor="White" SeparatorColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1">
+                <ListView x:Name="clubList" ItemsSource="{Binding ClubListSource}" BackgroundColor="White" SeparatorColor="Black" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
