--- a/FodboldApp/FodboldApp/FodboldApp/View/Players.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Players.xaml
@@ -1,18 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
-		     xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
-    x:Class="FodboldApp.Players">
-    
-    <ContentPage.Content>
+             x:Class="FodboldApp.Players"
+             xmlns:usercontrol="clr-namespace:FodboldApp.View.UserControl"
+             xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
+             xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView">
+    <ContentPage.BindingContext>
+        <viewmodels:PlayerVM />
+    </ContentPage.BindingContext>
 
+    <ContentPage.Content>
         <StackLayout>
             <Label Text="1. HOLDET" TextColor="#243F73" FontSize="Large" VerticalOptions="Center" 
            HorizontalOptions="Center"/>
+            
+            <flv:FlowListView x:Name="flowListView" FlowColumnCount="2" SeparatorVisibility="None" HasUnevenRows="True" 
+			FlowItemsSource="{Binding PlayerListSource}" ItemTapped="Players_Tapped">
 
-            <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand">
-                <Grid VerticalOptions="Start" ColumnSpacing="5" RowSpacing="5">
+                <flv:FlowListView.FlowColumnTemplate>
+                    <DataTemplate>
+                        <usercontrol:PlayerUC Padding="5,5,5,5"/>
+                    </DataTemplate>
+                </flv:FlowListView.FlowColumnTemplate>
+
+            </flv:FlowListView>
+        </StackLayout>
+    
+        <!--<flv:FlowListView x:Name="flowListView" FlowColumnCount="2" SeparatorVisibility="None" HasUnevenRows="True"
+			FlowItemsSource="{Binding PlayerListSource}">
+
+            <flv:FlowListView.FlowColumnTemplate>
+                <DataTemplate>
+                    <Grid Padding="3">
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <ffimageloading:CachedImage HeightRequest="100" Aspect="AspectFill"
+							DownsampleHeight="100" DownsampleUseDipUnits="false"
+							Source="{Binding ImageUrl}"/>
+
+                        <Label x:Name="Label" HorizontalOptions="Fill" HorizontalTextAlignment="Center" VerticalOptions="End"
+							BackgroundColor="Silver" Opacity="0.5" Text="{Binding Name}"/>
+                    </Grid>
+                </DataTemplate>
+            </flv:FlowListView.FlowColumnTemplate>
+
+        </flv:FlowListView>-->
+
+        <!--<StackLayout>
+            <Label Text="1. HOLDET" TextColor="#243F73" FontSize="Large" VerticalOptions="Center" 
+           HorizontalOptions="Center"/>
+            
+           
+            --><!--<Grid VerticalOptions="Start" ColumnSpacing="5" RowSpacing="5" >
+
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
@@ -23,54 +69,21 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <!--===============================================================-->
+                    --><!--===============================================================-->
                     <!--First element in scrollable grid-->
-                    <!--Implement a user control for the players instead of coding the same several times-->
+                    <!--Implement a user control for the players instead of coding the same several times--><!--
                     <Grid Grid.Row="0" Grid.Column="0">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer
-                                Tapped="Players_Tapped"
-                                NumberOfTapsRequired="1"/>
-                        </Grid.GestureRecognizers>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
+                        <usercontrol:PlayerUC/>
+                    </Grid>
+                    --><!--===============================================================-->
 
-                        <Image Source="http://www.bkfrem.dk/images/spillere/07_andreas_lundberg.jpg" Grid.Row="0" HeightRequest="200"/>
-                            <!--ff:CachedImage Source = "http://www.bkfrem.dk/images/spillere/07_andreas_lundberg.jpg" Grid.Row="0">
-                            <ff:CachedImage.Transformations>
-                                <fftransformations:CornersTransformation 
-                                    CornersTransformType="TopLeftRounded, TopRightRounded, BottomLeftRounded, BottomRightRounded"          
-                                    BottomLeftCornerSize="80" BottomRightCornerSize="80" TopLeftCornerSize="80" TopRightCornerSize="80" />
-                            </ff:CachedImage.Transformations>
-                        </-->
-                        <Label Text="Andreas Theil Lundberg" FontSize="11" Grid.Row="1" HorizontalOptions="Center" TextColor="#FB433C" Margin="0, 0, 0, -5"/>
-                        <Label Text="Forsvar/midtbane" FontSize="6" Grid.Row="2" HorizontalOptions="Center" TextColor="#243F73" Margin="0, 0, 0, 10"/>
-                        <Label Text="Læs mere" FontSize="11" Grid.Row="3" HorizontalOptions="Center" TextColor="#17CC24"/>
-                    </Grid>
-                    <!--===============================================================-->
-                    
-                    <!--Second element in scrollable grid-->
+                    <!--Second element in scrollable grid--><!--
                     <Grid Grid.Row="0" Grid.Column="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
-                        <Image Source="http://www.bkfrem.dk/images/spillere/07_andreas_lundberg.jpg" Grid.Row="0" HeightRequest="200"/>
-                        <Label Text="Andreas Theil Lundberg" FontSize="11" Grid.Row="1" HorizontalOptions="Center" TextColor="#FB433C" Margin="0, 0, 0, -5"/>
-                        <Label Text="Forsvar/midtbane" FontSize="6" Grid.Row="2" HorizontalOptions="Center" TextColor="#243F73" Margin="0, 0, 0, 10"/>
-                        <Label Text="Læs mere" FontSize="11" Grid.Row="3" HorizontalOptions="Center" TextColor="#17CC24"/>
+                        <usercontrol:PlayerUC/>
                     </Grid>
-                    <!--===============================================================-->
-                    
-                    <!--Third element in scrollable grid-->
+                    --><!--===============================================================-->
+
+                    <!--Third element in scrollable grid--><!--
                     <Grid Grid.Row="1" Grid.Column="0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -84,9 +97,9 @@
                         <Label Text="Forsvar/midtbane" FontSize="6" Grid.Row="2" HorizontalOptions="Center" TextColor="#243F73" Margin="0, 0, 0, 10"/>
                         <Label Text="Læs mere" FontSize="11" Grid.Row="3" HorizontalOptions="Center" TextColor="#17CC24"/>
                     </Grid>
-                    <!--===============================================================-->
+                    --><!--===============================================================-->
 
-                    <!--Fourth element in scrollable grid-->
+                    <!--Fourth element in scrollable grid--><!--
                     <Grid Grid.Row="1" Grid.Column="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -100,9 +113,9 @@
                         <Label Text="Forsvar/midtbane" FontSize="6" Grid.Row="2" HorizontalOptions="Center" TextColor="#243F73" Margin="0, 0, 0, 10"/>
                         <Label Text="Læs mere" FontSize="11" Grid.Row="3" HorizontalOptions="Center" TextColor="#17CC24"/>
                     </Grid>
-                    <!--===============================================================-->
+                    --><!--===============================================================-->
 
-                    <!--Fifth element in scrollable grid-->
+                    <!--Fifth element in scrollable grid--><!--
                     <Grid Grid.Row="2" Grid.Column="0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -116,9 +129,9 @@
                         <Label Text="Forsvar/midtbane" FontSize="6" Grid.Row="2" HorizontalOptions="Center" TextColor="#243F73" Margin="0, 0, 0, 10"/>
                         <Label Text="Læs mere" FontSize="11" Grid.Row="3" HorizontalOptions="Center" TextColor="#17CC24"/>
                     </Grid>
-                    <!--===============================================================-->
-                    
-                    <!--Sixth element in scrollable grid-->
+                    --><!--===============================================================-->
+
+                    <!--Sixth element in scrollable grid--><!--
                     <Grid Grid.Row="2" Grid.Column="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -132,12 +145,11 @@
                         <Label Text="Forsvar/midtbane" FontSize="6" Grid.Row="2" HorizontalOptions="Center" TextColor="#243F73" Margin="0, 0, 0, 10"/>
                         <Label Text="Læs mere" FontSize="11" Grid.Row="3" HorizontalOptions="Center" TextColor="#17CC24"/>
                     </Grid>
-                    <!--===============================================================-->
+                    --><!--===============================================================--><!--
 
-                </Grid>
-            </ScrollView>
+                </Grid>--><!--
 
-        </StackLayout>
+        </StackLayout>-->
 
     </ContentPage.Content>
 
